intrusion-prevention/ressource_limits/pod_test_allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-testing
spec:
  containers:
    - name: test
      image: docker.io/nginx
      resources:
       limits:
         memory: "200Mi"
         cpu: "200m"
